notify users when dog is lost
